# wafw00f-GUI

./: .gitignore  CREDITS.md  LICENSE  README.md  pyproject.toml  requirements.txt  wafw00f-gui screenshot
.github/workflows/: build-binaries.yml
scripts/: build.ps1  build.sh  run.ps1  run.sh
src/wafw00f_gui/: app.py  logging_utils.py  main.py  reporting.py  runner.py  update_checker.py
