[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wafw00f-gui"
version = "1.1.0"
description = "Cross-platform GUI for wafw00f (Windows/Linux)"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
authors = [
  { name = "Letmehackyou011" },
]
maintainers = [
  { name = "Letmehackyou011" },
]
dependencies = [
  "wafw00f>=2.4.2",
]

[project.urls]
Homepage = "https://github.com/Letmehackyou011"
Source = "https://github.com/EnableSecurity/wafw00f"

[project.scripts]
wafw00f-gui = "wafw00f_gui.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
